<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Analysis</string>
    <string name="inputedit">输入</string>
    <string name="yeecall">yeecall</string>
    <string name="ctf">ctf</string>
    <string name="cmb">cmb</string>
    <string name="Exception">Exception</string>
    <string name="GC">GC</string>
    <string name="fuckits">Test1</string>
    <string name="Native">Native</string>
    <string name="Static">Static</string>
    <string name="SystemClass">System</string>
    <string name="Thread">Thread</string>
    <string name="Virtual">Virtual</string>
    <string name="WideningConversion">WideningConversion</string>
    <string name="killits">test2</string>
    <string name="more_details">Please see logcat for more details.</string>
    <string name="insert">insert</string>
    <string name="query">query</string>
    <string name="querys">querys</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
</resources>
