<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/more_details"
        android:textSize="17sp" />

    <Button
        android:id="@+id/Test1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/more"
        android:layout_alignParentStart="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/fuckits" />

    <Button
        android:id="@+id/Test2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/more"
        android:layout_marginStart="20sp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@id/Test1"
        android:text="@string/killits" />

    <Button
        android:id="@+id/decrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/more"
        android:layout_marginStart="20sp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@id/Test2"
        android:text="@string/decrypt" />

    <Button
        android:id="@+id/insert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Test1"
        android:text="@string/insert" />

    <Button
        android:id="@+id/query"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/insert"
        android:text="@string/query" />

    <Button
        android:id="@+id/querys"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/query"
        android:text="@string/querys" />

    <Button
        android:id="@+id/update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/querys"
        android:text="@string/update" />

    <Button
        android:id="@+id/delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/update"
        android:text="@string/delete" />


    <EditText
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/delete"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:maxLines="512"
        android:scrollbars="vertical"
        android:text="@string/app_name"
        android:textCursorDrawable="@null"
        android:textIsSelectable="true"
        android:textSize="17sp" />
</RelativeLayout>